test/test_11710503_1.out
Error type 1 at Line 6: undefined variable: j
Error type 9 at Line 7: expect argument