test/test_11710503_1.spl
int add(int a,int b){
    return a+b;
}
int main(){
    int i = 0;
    j = 1;
    add();
}